[package]
name = "lab_support_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
bcrypt = "0.10"
chrono = "0.4"


[dependencies.async-std]
version = "1.9"
features = ["attributes"]

[dependencies.mongodb]
version = "2.0.0-beta.3"
default-features = false
features = ["async-std-runtime"]